# blog

./: README.md
document/: CMakeLists.md  C头文件的问题.md  PInvoke.md  UI中的长度单位详解.md  c.md  character encoding.md  compiling.md  d3d.md  docker.md  git.md  graphics_transform.md  html.md  kbdmou.txt  linux.md  memory_pool.md  mingw-gcc.md  openssl.md  qt.md  qtdesigner.md  regular expression.md  tcp.md  terminal.md  光学.md  函数调用约定.md  名词.md  多字节字符和宽字符.md  换行符和回车符的历史.md  无线设备配网.md  移动通信.md  线程同步.md
document/C#/: GC.SuppressFinalize.md  await和async关键字.md
document/MSVC compile system/: VisualStudio下的字符编码方式.md  _MSC_VER.txt  一些诡异现象的解释.md  在MSVC编译环境下自定义数据段.md  揭开__declspec(dllexport)和__declspec(dllimport)的面纱.md
document/Qt/: qmake.md
document/WPF/: DrawingVisual.md  UI线程和渲染线程.md  VisualTree和LogicalTree.md  WPF布局过程.md  virtualization  不同WPF基类的区别.md
document/WPF/DrawingVisual/: DrawingVisual.md
document/Windows/: IOCP完成端口编程模型.md
document/Winform/: DataGridView.md  重绘.md
document/apache/: apache.md
document/api/: linux.md
document/asm/: x86.md
document/builroot/: buildroot.md  mk-script.md
document/cygwin/: cygwin攻略.md  在vs里引用msys生成的dll.md
document/formats/: h264.md
document/gcc/: build with Android Standalone Toolchain.md  cmake命令调用方式.md  gcc.md  make.md
document/graphics/: transform.md
document/graphics_transform/: graphics_transform.md
document/http/: httpv1.md
document/javascript/: prototype.md
document/libvlc/: 使用libvlc播放H264实时视频流.md
document/linux/: cmd.md  linux_syscall.md
document/nginx/: module.css  nginx_source_event.md  nginx_source_event_1.md  启动过程.md
document/os/: paging.txt
document/socket/: flags.md  shutdown.md  socket.pptx
document/visualstudio/: CRT.md  visualstudio使用技巧.md
document/嵌入式/: 传输方式.md  半导体.md  数据手册指南.md  编码器.md
document/嵌入式/diode/: diode.md
document/嵌入式/triode/: triode.md
document/电子技术基础/: 电学基础.md  电容.md
document/电子技术基础/triode/: triode.md
frontend/raw/: main.css  main.html  main.ts  menu.ts  tsconfig.json
frontend/raw/mvvm/: mvvm.ts  viewModel.ts
frontend/vue/app/: package-lock.json
frontend/xos/: package-lock.json  package.json
frontend/xos/public/: index.html
frontend/xos/src/: App.css  App.js
frontend/xos/src/services/: MessageDispatcher.js  SystemProperties.js
frontend/xos/src/xui/: XApp.css  XApp.js  XAppMenu.js  XBackground.css  XBackground.js  XButton.js  XDesktop.css  XDesktop.js  XFileBrowser.css  XFileBrowser.js  XLaunchPad.css  XLaunchPad.js  XTaskbar.css  XTaskbar.js  XWindow.css  XWindow.js  xui.css
server/: .gitignore  CMakeLists.txt
server/cmake/: .gitignore  CMakeLists.txt
server/document/: design.pptx
server/msvc/: mm.sln  mm.vcxproj  server.sln  server.vcxproj  server.vcxproj.filters  service.json  steak.sln  zeus.sln  zeus.vcxproj  zeus.vcxproj.filters
server/msvc/Debug/: mm.exe.recipe  mm.vcxproj.FileListAbsolute.txt
server/msvc/Debug/mm.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mm.lastbuildstate
server/source/: DefaultOptions.h  HTTPConstants.h  ResponseCode.h  ServiceHost.c  ServiceHost.h  app.c  app.h  blog.h  cblog_app.c  cblog_app.h  cblog_buffer.c  cblog_buffer.h  cblog_default.h  cblog_errors.h  cblog_factory.c  cblog_factory.h  cblog_parser.c  cblog_parser.h  cblog_protocol.c  cblog_protocol.h  cblog_response.c  cblog_response.h  cblog_sockbuf.c  cblog_sockbuf.h  cblog_types.h  cblog_unit_test.c  cblog_unit_test.h  connection.h  default.h  errors.h  event.c  event.h  factory.c  factory.h  http_context.h  listening.c  listening.h  main.c  mm_config.c  mm_config.h  (+44 more)
server/source/EventPoll/: EventPoll.c  EventPoll.h  SelectEventPoll.c
server/source/FDEvent/: AcceptClientEvent.c  FDEvents.h
server/source/FDEventPoll/: FDEventPoll.h
server/source/FDMonitor/: FDMonitor.c  FDMonitor.h  FDMonitorTypes.h  SelectFDMonitor.c
server/source/core/: zeus_pool.h
server/source/event/: accept_client_event.c  event.c  event.h  poll_actions_select.c  read_request_event.c  write_response_event.c  zeus_driver_select.c  zeus_event.c  zeus_event.h  zeus_event_driver.c  zeus_event_driver.h
server/source/eventpoll/: event.c  event.h  eventpoll.c  eventpoll.h  eventpoll_actions_select.c  poll_actions_select.c
server/source/evtpoll/: EventPollTypes.h  accept_client_event.c  eventpoll.h  eventpoll_actions_select.c
server/source/header/: header.c  header.h
server/source/http/: cblog_demo_http_module.c  cblog_http_event.c  cblog_http_event.h  cblog_http_handler.c  cblog_http_module.h
server/source/http/modules/: xaml2html_module.c
server/source/http_handler/: cblog_http_handler.c  cblog_http_handler.h
server/source/module/: cblog_event_module.c  cblog_event_module.h  cblog_http_module.h  steak_http_handler.h
server/source/modules/: service.c
server/source/monitor/: zeus_driver_select.c  zeus_event.c  zeus_event.h  zeus_socket_monitor.c  zeus_socket_monitor.h
server/source/parser/: parser.c  parser.h
server/source/polls/: select.c
server/source/process/: accept.c
server/source/request/: request.h
server/source/response/: response.h
server/source/session/: session.c  session.h
server/source/socket/: zeus_socket.h  zeus_socket_select.c
server/source/utils/: cblog_linklist.h  cblog_socket.c  cblog_socket.h  cblog_string.c  cblog_string.h  cblog_utils.h  cblog_xaml2html.c  cblog_xaml2html.h  steak_socket.c  steak_socket.h  steak_string.c  steak_string.h  steak_utils.h
(+2 files in other folders)
